# ana

./: .gitignore  IM_UX_STEERING_PROPOSAL.md  README.md  justfile  pyproject.toml
aha/: __main__.py  bus.py  cli.py  config.py  runtime_log.py
aha/core/: context.py  loop.py  (+1 more)
ana/: __main__.py  bus.py  cli.py  config.py  evals.py  evolution_scheduler.py  evolve.py  runtime_log.py  stats.py
tests/: test_bus.py  test_channels_manager.py  test_cli_slash_new.py  test_config_evolution.py  test_context_active_skills.py  test_context_build_report.py  test_context_editor_compaction_rules.py  test_context_manager_budget_guard.py  test_context_manager_feature_flag.py  test_context_manager_retrieval_rank.py  test_error_handling.py  test_evals_cli.py  test_evals_datasets.py  test_evolution_automation.py  test_evolution_closed_loop.py  test_evolution_review_fixes.py  test_im_runtime.py  test_litellm_provider.py  test_loop_uses_working_set_instead_of_full_messages.py  test_memory_promotion_conflict_resolution.py  test_model_assisted_compaction_fallback.py  test_observability_trace.py  test_path_utils.py  test_policy_session_state.py  test_policy_skill_actions.py  test_policy_skill_constraints.py  test_runtime_logging.py  test_shell_defense_in_depth.py  test_skill_lint.py  test_skill_locking.py  test_skill_manager_diff.py  test_skill_manager_e2e.py  test_skill_manager_governance.py  test_skill_manager_hardening.py  test_skill_manifest.py  test_skill_resolution.py  test_skill_trace_attribution.py  test_telegram_channel.py  test_toolresult_compat.py  test_trace_context_events_schema.py  (+1 more)
(+46 files in other folders)
