[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ana-agent"
version = "0.1.0"
description = "ANA MVP - minimal ReAct agent with policy-guarded tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "litellm>=1.50.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
telegram = [
  "python-telegram-bot>=21.0",
]
discord = [
  "discord.py>=2.4.0",
]
im = [
  "python-telegram-bot>=21.0",
  "discord.py>=2.4.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ana = "ana.cli:app"

[tool.setuptools]
packages = ["ana", "ana.app", "ana.channels", "ana.context_manager", "ana.core", "ana.providers", "ana.tools"]
